--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: iransans;
-    src: url(./assets/fonts/IRANSansWebFaNum.woff2);
+    src: url(../public/assets/fonts/IRANSansWebFaNum.woff2);
 }
 @font-face {
     font-family: moraba;
-    src: url(./assets/fonts/Morabba-Bold.woff2);
+    src: url(../public/assets/fonts/Morabba-Bold.woff2);
 }
 body{
     direction: rtl;
