create faq section
use accordion components from mui and set gradient for  section

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,8 @@ body{
     border-radius: 100%;
     position: absolute;
 }
+.faq{
+    border-radius: 20px !important;
+    padding:10px 20px;
+    
+}
