--- a/src/Components/Swiper/Portfolio/style.css
+++ b/src/Components/Swiper/Portfolio/style.css
@@ -19,5 +19,12 @@
     width: 100% ;
     height: 100% ;
   }
+  @media screen and (max-width:600px) {
+    .portfolio{
+      width: 80%;
+      height: auto;
+    }
+    
+  }
   
  
