--- a/src/Components/Swiper/Portfolio/style.css
+++ b/src/Components/Swiper/Portfolio/style.css
@@ -26,8 +26,8 @@
 
   @media screen and (max-width:600px) {
     .portfolio{
-      
-      height: 350px;
+      width: 70%;
+      height: 250px;
     }
     
   }
