Registration of employer changes

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 }
 body{
     direction: rtl;
+    overflow-x: hidden;
 }
 .firstdiv{
     background: radial-gradient(60% 50% at 100% 0%, rgba(61, 0, 124, 0.50) 0%, rgba(61, 0, 124, 0.03) 100%, rgba(61, 0, 124, 0.03) 100%);
