--- a/src/Components/Swiper/MobileOurServices/style.css
+++ b/src/Components/Swiper/MobileOurServices/style.css
@@ -15,8 +15,8 @@
 
 @media screen and (max-width:600px) {
     .Mobile-our-service .swiper-slide img {
-            width: 100px !important ;
-            height: 100px !important;
+            width: 256px !important ;
+            height: 100% !important;
     }
     
 }
