--- a/src/Components/Swiper/Portfolio/style.css
+++ b/src/Components/Swiper/Portfolio/style.css
@@ -4,7 +4,7 @@
   }
   
   .portfolio-item {
-    padding: 18px;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    box-sizing: border-box;
   }
  
   .portfolio-item  img {
@@ -26,8 +27,8 @@
 
   @media screen and (max-width:600px) {
     .portfolio{
-      width: 70%;
-      height: 250px;
+      width: 100%;
+      height: 100%px;
     }
     
   }
