--- a/src/Components/SpeedDial/style.css
+++ b/src/Components/SpeedDial/style.css
@@ -1,10 +1,10 @@
 .speedDial{
     width: 100%;
     height: 100%;
-    margin: 5px;
+    padding: 10px;
 }
 .speedDialIteme{
     width: 100%;
     height: 100%;
-    margin: 10px;
+    padding: 10px;
 }
